# harmonics-server

./: .gitignore  Dockerfile  README.md
app/: index.js  package-lock.json  package.json
lib/congen-1.7/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  configure  configure.ac  congen_input.txt  diff_congen_output.cc
lib/congen-1.7/scripts/: Compound2Basic.rb  XDO2Basic.rb
lib/congen-1.7/utf8-src/: Congen  congen.cc  libcongen.cc  mangle.sed
lib/harmgen-json-3.1.3/: AUTHORS  Bjoern_Brill.txt  C_J_Read.txt  ChangeLog  Makefile.am  Makefile.in  README  configure  configure.ac  congen_1yr.txt  congen_5yrs.txt  congen_9yrs.txt  harmgen-orig.cc  harmgen.sh
patches/: harmgen-json.patch
